k8s/ingress/infra-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infra-ingress
  namespace: infra
  labels:
    app.kubernetes.io/part-of: homelab-infra
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca-issuer
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - minio.homelab.local
        - s3.homelab.local
        - rabbitmq.homelab.local
        - dashboards.homelab.local
        - opensearch.homelab.local
        - kubeview.homelab.local
        - grafana.homelab.local
        - auth.homelab.local
      secretName: homelab-infra-tls
  rules:
    - host: minio.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  number: 9001
    - host: s3.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  number: 9000
    - host: rabbitmq.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmq-service
                port:
                  number: 15672
    - host: dashboards.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-dashboards-service
                port:
                  number: 5601
    - host: opensearch.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opensearch-service
                port:
                  number: 9200
    - host: grafana.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana-service
                port:
                  number: 3000
